feat: create new genre, only admin can do this action
