# app/doc/swaggerDocumentation.yaml
@@ -47,7 +47,7 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/User"
-            example:
+            example: {}
 
       responses:
         "200":
@@ -667,6 +667,37 @@ paths:
               schema:
                 $ref: "#/components/schemas/MusicGenre"
 
+  /api/auth/genres/create:
+    post:
+      summary: Create a new music genre
+      tags:
+        - MusicGenre
+      requestBody:
+        description: Creates a new music genre, only the admin can do this action
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MusicGenre"
+            example:
+              name: New genre
+
+      responses:
+        "201":
+          description: Genre created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MusicGenre"
+        "400":
+          description: Genre already exists or is a bad request
+
+        "403":
+          description: Only the admin can do this action
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MusicGenre"
 components:
   schemas:
     User:
